# msys2-wxwidgets-static-cmake-example

./: CMakeLists.txt  README.md
